2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainEditor.cpp: added some nice casts, rearranged some exception catching

2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/ogre.cfg: update the config to work with Ogre 1.2

2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: use the ground texture from 3d_objects
	
2006-05-02 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/model/XMLModelDefinitionSerializer.cpp: make sure that paths are correctly separated
    
2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.cpp, src/components/ogre/EmberOgre.h: allow the home directory of ember to be set on the command line

2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/Bootstrap.lua: added comments

2006-04-25 Erik Hjortsberg  <erik@katastrof.nu>

    * src/services/config/ConfigService.cpp, src/services/config/ConfigService.h: added ability to set a different home directory than the default

2006-04-11 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/GUIManager.cpp, src/components/ogre/GUIManager.h, src/components/ogre/Makefile.am, src/components/ogre/EmberEventProcessor.cpp, src/components/ogre/EmberEventProcessor.h: removed obsolete file

2006-04-11 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/TerrainEditor.lua, src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: added undo and redo feature
    * src/components/ogre/scripting/bindings/lua/EntityWorldPickListener.pkg, src/components/ogre/scripting/bindings/lua/ListHolder.pkg, src/components/ogre/scripting/bindings/lua/TerrainEditor.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: 
    	* mark moved base points